# HAR-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  LOCAL_SETUP_GUIDE.md  README.md  dev.sh  docker-compose.webcam.yml  docker-compose.yml  pyproject.toml  requirements-auth.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
core_docs/: BRANCHING_STRATEGY.md  FUNCTIONAL_SPEC.md  TECHNICAL_DESIGN.md
core_docs/learning/: 01_FUNCTIONAL_SPEC_ka_Hinglish_Explanation.md  02_TECHNICAL_DESIGN_ka_Hinglish_Explanation.md  03_AUTH_RBAC_ka_Hinglish_Explanation.md  04_SIMPLE_RBAC_PLAN_Hinglish.md  05_FRONTEND_UI_UX_REDESIGN_Hinglish.md  06_VIDEO_SERVICE_BUG_FIX_Hinglish.md  07_REPORT_EMPIRICAL_RESULTS.md  08_BACKEND_STABILITY_FIXES_Hinglish.md  09_GEMINI_AI_INTEGRATION_Hinglish.md  10_VIDEO_AND_AUTH_FIXES_Hinglish.md
core_docs/milestones/: README.md
dashboard/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  Router.tsx  main.tsx  styles.css  types.ts
mosquitto/config/: mosquitto.conf
scripts/: common.sh  make_admin.py  release_audit.py  seed.sh  seed.sql  setup.sh  smoke.sh  validate_deployment.py
services/: __init__.py  runtime.py
services/auth_service/: Dockerfile  __init__.py  app.py  config.py  jwt_verifier.py  local_auth.py  models.py  proxy.py  rbac.py  tickets.py
services/feedback_service/: __init__.py  api.py  app.py  config.py  digest.py  engine.py  fallback.py  llm.py  models.py  runtime.py  safety.py  websocket.py
services/fusion_service/: __init__.py  api.py  app.py  config.py  fusion.py  models.py  runtime.py  safety.py  websocket.py
services/sensor_service/: __init__.py  app.py  classifier.py  config.py  features.py  local_model.py  mqtt.py  pipeline.py  windowing.py
services/video_service/: __init__.py  adapters.py  app.py  classifier.py  config.py  landmarks.py  pipeline.py
shared/: __init__.py  config.py  db.py  labels.py  logging.py  schemas.py  topics.py
shared/sql/: 001_init.sql
simulator/: README.md  __init__.py  demo.py  replay.py
simulator/datasets/: __init__.py  base.py  sisfall.py  uci_har.py  wisdm.py
supabase/migrations/: 001_auth_rbac.sql
tests/contract/: test_message_contracts.py  test_milestone2_fixtures.py  test_video_privacy.py
tests/fixtures/: milestone2_predictions.json
tests/integration/: test_auth_gateway.py  test_fusion_api.py  (+5 more)
(+80 files in other folders)
